Closed Bug 1294998 Opened 9 years ago Closed 9 years ago

Unexpected horizontal over scroll effect when panning vertically

Categories

(Firefox for Android Graveyard :: Toolbar, defect, P2)

Unspecified
Android
defect

Tracking

(firefox51 verified)

VERIFIED FIXED
Firefox 51
Tracking Status
firefox51 --- verified

People

(Reporter: snorp, Assigned: rbarker)

Details

Attachments

(1 file, 1 obsolete file)

I just ran into this here: https://blog.risingstack.com/getting-started-with-nodejs-and-mqtt/ If I pan up and down the article, I frequently get over scroll glow on the sides.
Assignee: nobody → rbarker
OS: Unspecified → Android
Priority: -- → P2
The current Fennec overscroll effect in APZ shows even for scrollable frames that are not the root. This can cause excessive overscroll effects to show on some pages. This patch reverts it to the previous behavior of JPZ which only showed overscroll effect for the root content.
Attachment #8783011 - Flags: review?(botond)
Comment on attachment 8783011 [details] [diff] [review] 0001-Bug-1294998-In-Fennec-only-show-overscroll-effect-for-root-content-r-botond-16081911-1b260a8.patch Patch had extra junk in it. Canceling review so I can clean it up.
Attachment #8783011 - Flags: review?(botond)
Attachment #8783013 - Flags: review?(botond)
Comment on attachment 8783013 [details] [diff] [review] 0001-Bug-1294998-In-Fennec-only-show-overscroll-effect-for-root-content-r-botond-16081911-93d3bae.patch Review of attachment 8783013 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/apz/public/GeckoContentController.h @@ +137,5 @@ > * Notify content that the repaint requests have been flushed. > */ > virtual void NotifyFlushComplete() = 0; > > + virtual void UpdateOverscrollVelocity(const float aX, const float aY, const bool aIsRootContent) {} Toplevel |const| on a function argument is superfluous. I don't know why the existing arguments have them, but please don't add more (and feel free to remove the existing ones).
Attachment #8783013 - Flags: review?(botond) → review+
Pushed by rbarker@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/e96e6002ed72 In Fennec only show overscroll effect for root content r=botond
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 51
Verified as fixed using the steps provided by James in description with Galaxy Note 5(6.0.1) on Nightly 51.0a1(2016-08-31)
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: