Bug 1294998 - In Fennec only show overscroll effect for root content r=botond